# MouseUsageTracker

./: Cargo.toml  LICENSE  README.md  build.rs  icon.rc  mouse_usage.db
.github/workflows/: rust.yml
src/: main.rs
