[package]
name = "TrackMouse"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "chrono"] } # Chrono desteğini ekledik
rdev = "0.5"
chrono = "0.4"
tray-item = "0.10" 
rusqlite = { version = "0.32.1", features = ["bundled"] }

[build-dependencies]
embed-resource = "2.3"
